--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html>
     <head>
-        <tile>html logs</tile>
+        <meta charset = "UTF-8">
+        <meta name="author" content="SmartWork">
+        <meta name="description" content="demo website">
+        <title>DEMO-1</title>
     </head>
+    <body>
+        <h1>WELCOME TO SMARTWORK</h1>
+        <hr width="500px">
+        <br>
+        <!-- this is my first try -->
+        <P>&nbsp UTF-8 is capable of <a href="https://en.wikipedia.org/wiki/UTF-8" ><i><b>encoding all</b></i></a>1,112,064[nb 1](backslash) in escape sequences, and % in printf.</P>\
+        <p>hey, Thanos snap a finger to vanish half off the universe it's 9<sup>3</sup></p>
+        <p>here, all the welcome to my class here we go <sub>[0]</sub>.</p>
+        <img src="" alt="none">
+    </body>
 </html>
